# cloth-manipulation

./: .gitmodules  CMakeLists.txt  README.md  franka_controllers_plugin.xml  package.xml
cfg/: compliance_param.cfg  desired_mass_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
config/: fingertip_tf.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
config/moveit_config/: fake_controllers.yaml  gazebo_panda.urdf  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
include/cloth_manipulation/: cartesian_pose_example_controller.h  color_mask.hpp  full_grasping_node.hpp  joint_position_example_controller.h
launch/: azure_ros.launch  calibrated_hand_camera.launch  color_mask.launch  full_grasping_planner.launch  hand_realsense_tf.launch  hand_realsense_tf_new_mount.launch  joint_space_planner.launch  link0_azure_tf.launch  link0_azure_tf_refined.launch  panda_finger_tip_tf.launch  panda_finger_tip_tf.launch.launch  realsense_ros.launch  throttle.launch  visual_feedback_azure.launch  visual_feedback_realsense.launch  visual_policy.launch  visual_policy_azure.launch  visual_policy_realsense.launch
rviz/: pcd.rviz
scripts/: autonomous_policy.py  azure_ros.py  parameterized_action.py  pushing_action.py  realsense_ros.py  visual_feedback_azure.py  visual_feedback_realsense.py  visual_policy.py
src/: cartesian_pose_example_controller.cpp  color_mask.cpp  full_grasping_planner.cpp  joint_position_example_controller.cpp  joint_space_planner.cpp  moveit_joint_space_planner.cpp
